tests/neg-custom-args/captures/pairs.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/pairs.scala:14:30 ----------------------------------------
14 |    val x1c: Cap ->{c} Unit = x1  // error
   |                              ^^
   |                              Found:    (x$0: Cap^?) ->{x1} Unit
   |                              Required: Cap^ ->{c} Unit
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/pairs.scala:16:30 ----------------------------------------
16 |    val y1c: Cap ->{d} Unit = y1  // error
   |                              ^^
   |                              Found:    (x$0: Cap^?) ->{y1} Unit
   |                              Required: Cap^ ->{d} Unit
   |
   | longer explanation available when compiling with `-explain`
